--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@ body{
 
 
 .topnav {
-	background-color: #ffe875;
+	 background-color: #ffe875;
 	overflow: hidden;
 	margin: 40px;
 	background-image:url('https://media.istockphoto.com/id/1429969786/vector/yellow-white-plaid-rustic-seamless-pattern.jpg?s=612x612&w=0&k=20&c=LFdVEjeJ0xeqmIYvcK2QqPLmIzbQBbs_IJvN5w1Skg8=');
-	
+	border:2px dashed goldenrod;
 }
 
 /* Style the links inside the navigation bar */
@@ -20,10 +20,11 @@ body{
 	margin-left: 200px;
 	margin-right:200px;
 	margin-top:20px;
-	
+	border-radius:10px;
 }
 .topnav li{
 	padding: 0px 30px; 
+	border-radius:10px;
 }
 }
 
@@ -40,10 +41,12 @@ ul {
 	padding: 0;
 	overflow: hidden;
 	background-color: #7e49f8;
+	border-radius:10px;
 }
 
 li {
 	float: left;
+	border-radius:10px;
 }
 
 li a, .dropbtn {
@@ -98,6 +101,7 @@ li.dropdown {
 	width:850px;
 	height:300px;
 	margin-bottom:30px;
+	border:2px dashed goldenrod;
 }
 
 .cols{
@@ -106,11 +110,32 @@ li.dropdown {
 	margin:50px;
 	margin-left: 80px;
 	margin-right: 80px ;
+	border:2px dashed goldenrod;
 }
 
 p{
 	padding-right:80px;
 	padding-left:80px;
 	background-color:white;
-	border-radius:50px;
+	border-radius:10px;
+	margin:0px 150px;
+}
+figcaption a{
+	text-decoration: none;
+	color:#8661d1;
+	background-color:lightgoldenrodyellow;
+	border-radius:10px;
+	font-size:1.5em;
+	padding:5px;
+	border:2px purple dotted;
+}
+
+.more{
+ border-radius:10px;
+	border:2px dashed #8661d1;
+	color:#8661d1;
+	padding:5px;
+	margin:0px 600px;
+	background-image:url('https://t3.ftcdn.net/jpg/05/12/41/30/360_F_512413029_f3oHvyz8EOOVNBOtyUyFr1Jaw88CSvHq.jpg');
+
 }
