--- a/style.css
+++ b/style.css
@@ -139,3 +139,25 @@ figcaption a{
 	background-image:url('https://t3.ftcdn.net/jpg/05/12/41/30/360_F_512413029_f3oHvyz8EOOVNBOtyUyFr1Jaw88CSvHq.jpg');
 
 }
+.bird{
+	width:700px;
+	border:5px double goldenrod
+}
+
+.mits{
+	display: flex;
+	justify-content: center;
+	background-image:url('https://media.istockphoto.com/id/1429969786/vector/yellow-white-plaid-rustic-seamless-pattern.jpg?s=612x612&w=0&k=20&c=LFdVEjeJ0xeqmIYvcK2QqPLmIzbQBbs_IJvN5w1Skg8=');
+padding:50px;
+   margin:0px 450px;
+	border:2px dashed goldenrod;
+}
+
+.cat{
+border-radius:10px;
+border:2px dashed #8661d1;
+color:#8661d1;
+padding:5px;
+margin:0px 600px;
+background-image:url('https://t3.ftcdn.net/jpg/05/12/41/30/360_F_512413029_f3oHvyz8EOOVNBOtyUyFr1Jaw88CSvHq.jpg');
+}
