--- a/style.css
+++ b/style.css
@@ -165,5 +165,19 @@ color:#8661d1;
 padding:5px;
 margin:0px 600px;
 background-image:url('https://t3.ftcdn.net/jpg/05/12/41/30/360_F_512413029_f3oHvyz8EOOVNBOtyUyFr1Jaw88CSvHq.jpg');
+}
+.non{
+	margin-left:600px;
+	margin-top:10px;
+	border:5px dashed goldenrod;
+	border-radius:40px;
 	
 }
+.mio{
+		display: flex;
+		justify-content: flex-end;
+		background-image:url('https://media.istockphoto.com/id/1429969786/vector/yellow-white-plaid-rustic-seamless-pattern.jpg?s=612x612&w=0&k=20&c=LFdVEjeJ0xeqmIYvcK2QqPLmIzbQBbs_IJvN5w1Skg8=');
+	padding:50px;
+		 margin:0px 450px;
+		border:2px dashed goldenrod;
+	}
